# ossql

./: .gitignore  README.md  app.py  pyproject.toml
data/: atletas.csv
models/: database.py  interface.py  questions.py
static/questions/: home.md  question1.md
static/results/: question1.sql  question2.sql
