[project]
name = "ossql"
version = "0.1.0"
description = "Projeto didático que ajuda praticantes de jiu-jitsu a se sentirem à vontade para aprender SQL"
authors = [
    {name = "Guilherme Silva"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.48.1,<2.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "streamlit-ace (>=0.1.1,<0.2.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
